# mapping-engine-cpp_scala_sb

./: .gitignore  README.md  docker-compose.yml
engine/: README.md  build.sbt
engine/implementation/src/main/resources/: application.conf  logback.xml
engine/implementation/src/main/resources/configs/: README.md  config1.json  config10.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json  config91.json  configSensorHumidity.json  configSensorTemperature.json  configSensorVoltage.json
engine/implementation/src/main/scala/app/: MappingEngineLoader.scala
engine/implementation/src/main/scala/config/: Config.scala  ConfigLoader.scala
engine/implementation/src/main/scala/engine/: Mapper.scala  MapperFunctions.scala  Validator.scala
engine/implementation/src/main/scala/impl/: MappingEngineServiceImpl.scala  ProcessorActor.scala  models.scala
engine/implementation/src/main/scala/subscriber/: FlowHelper.scala  KafkaSubscriber.scala
engine/implementation/src/main/scala/utils/: Constants.scala
engine/implementation/src/tests/resources/: logback.xml
engine/project/: plugins.sbt
engine/service/src/main/scala/: MappingEngineKafkaConsumer.scala  MappingEngineService.scala
receiver/: CMakeLists.txt  Dockerfile  receiver
receiver/inc/: Http2Receiver.h  HttpReceiver.h  KafkaProducer.h  ReceiveAdapter.h  TcpReceiver.h  UdpReceiver.h  common.h
receiver/src/: Http2Receiver.cpp  HttpReceiver.cpp  KafkaProducer.cpp  ReceiveAdapter.cpp  TcpReceiver.cpp  UdpReceiver.cpp  main.cpp
simulator/: CMakeLists.txt  Dockerfile  simulator
simulator/inc/: Transport.h
simulator/inc/sensor/: AbstractSensor.h  HumiditySensor.h  TemperatureSensor.h  VoltageSensor.h
simulator/src/: main.cpp
simulator/src/sensor/: AbstractSensor.cpp  HumiditySensor.cpp  TemperatureSensor.cpp  VoltageSensor.cpp
simulator/src/transport/: TransportStrategyHttp.cpp  TransportStrategyHttp2.cpp  TransportStrategyTcp.cpp  TransportStrategyUdp.cpp
ui/: README.md  pom.xml
ui/src/main/java/com/myalc/mappingengine/controllers/: WebController.java
ui/src/main/java/com/myalc/mappingengine/model/: Config.java
ui/src/main/java/com/myalc/mappingengine/ui/: Application.java
ui/src/main/resources/: application.properties
ui/src/main/resources/static/js/: main.js
ui/src/main/resources/templates/: index.html
